-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
None
-
649f5f650 (dev), 10cba7472 (6.5)
-
DaVinci 80, DaVinci 81
"Qt Quick Effects", "Qt Quick Particles" modules are not properly linked in All Modules overview page.
For Gerrit Dashboard: QTBUG-113454 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
480868,3 | Doc: Make 'Qt Quick Effects' and 'Qt Quick Particles' linkable targets | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
481457,2 | Doc: Make 'Qt Quick Effects' and 'Qt Quick Particles' linkable targets | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |