Doc: Make 'Qt Quick Effects' and 'Qt Quick Particles' linkable targets

These modules have no separate landing pages within Qt Quick. Add
\keyword commands to create linkable targets to their respective
QML module pages.

Link to Qt Quick Effects from the Qt Quick landing page.

Fixes: QTBUG-113454
Change-Id: I9376d9c946cc7a4d4728584a96ddf701deaeb4b5
Reviewed-by: Andreas Eliasson <andreas.eliasson@qt.io>
(cherry picked from commit 649f5f650b4fc9d96e84be597176dda5e6893a0a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>